--- a/indexx1.css
+++ b/indexx1.css
@@ -1,1 +1,255 @@
 
+  body{
+            overflow-x: hidden;
+            margin: 0px;
+        }
+        li{
+            list-style: none;
+        }
+        a{
+            text-decoration: none;
+        }
+        .nav-link{
+            color: rgb(187, 202, 50);
+        }
+        .contain{
+            background: rgb(23, 38, 66);
+            margin: 0px 0px 0px 0px;
+            padding: 8px 0px 8px 0px;
+            position: fixed;
+            width: 100%;
+        }
+        .tab-pane ul li{
+            margin: 10px;
+        }
+        .tab-pane ul li a{
+            border: 2px solid rgb(9, 255, 0);
+            border-radius: 8%;
+            background: greenyellow;
+            padding: 2px;
+            
+        }
+        .search{
+            margin-left: 40%;
+        }
+        .nav-link{
+            margin-left: 18%;
+        }
+        .bundell{
+            background: rgb(9, 87, 233);
+            border-bottom-left-radius: 18%;
+            border-bottom-right-radius: 18%;
+            padding: 45px;
+        }
+        @media(max-width:500px){
+            .bundell{
+                background: rgb(9, 87, 233);
+                padding: 25px;
+            }
+            .box{
+                width: 81px;
+                padding: 25px;
+                height: 25px;
+                display:flex ;
+                text-align: center;
+                justify-content: center;
+                margin-left: 15px;
+            }
+            .fasele{
+                margin-left: 20px;
+            }
+            .fasela{
+                margin-left: 25px;
+            }
+            .bux{
+                margin: auto;
+                width: 322px;
+            }
+            .kol{
+                display: none;
+            }
+            .delay{
+                margin-top: 24%;
+            }
+        }
+
+
+        .box{
+            border: 1px solid white;  
+            border-radius: 22%;
+            background: rgb(236, 230, 230);
+            width: 81px;
+            height: 73px;
+            box-shadow: 0px 3px 8px 0px rgba(14, 12, 12, 0.8);
+        }
+        .box:hover{
+            background: rgb(167, 168, 164);
+            width: 76px;
+        }
+        .box{
+            text-align: center;
+            padding-top: 10px;
+            margin-top: 24%;
+        }
+        .namad{
+            font-size: 25px;
+            text-align: center;
+            padding-top: 45px;
+        }
+        .matn{
+            text-align: center;
+        }
+        .detail{
+            text-align: center;
+            background: rgb(235, 232, 232);
+            padding: 12px;
+            box-shadow: 0px 2px 2px 1px rgb(17, 16, 16);
+            border-radius: 25px;
+            margin-top: 12px;
+        }
+        .star{
+            color: #a4a415;
+        }
+        .img{
+            border-radius: 50%;
+        }
+
+
+        .tanligh{
+            margin-top: 5%;
+            
+        }
+        .tab{
+            text-align: center;
+        }
+        .tat{
+            border: 1px solid rgb(12, 11, 11);
+            border-radius: 25px;
+            padding: 1px;
+        }
+        .but{
+            width: 250px;
+            background: #63708d;
+            border-radius: 12px;
+            padding: 8px;
+        }
+        .but:hover{
+            background: #48536d;
+            width: 245px;
+        }
+        .emg{
+            width: 200px;
+            border-radius: 12px;
+        }
+        @media(max-width:500px){
+            .emg{
+                display: none;
+            }
+        }
+    .footer{
+        text-align: center;
+        background: rgb(86, 86, 86);
+        color: white;
+    }
+    .footer2{
+        margin-top: 12px;
+        margin-bottom: 5px;
+    }
+    .footer2 a{
+        color: aliceblue;
+        border: 2px solid white;
+        border-radius: 25px;
+        padding: 5px;
+    }
+    .footer2 a:hover{
+        color: rgb(0, 0, 0);
+        background: rgb(240, 238, 109);
+        padding: 8px;
+    }
+
+    .show{
+        display: none;
+    }
+
+    .slider{
+        width: 250px;
+        text-align: center;
+        overflow: hidden;
+    }
+    .slides{
+        display: flex;
+        overflow-x: auto;
+        width: 250px;
+        border-radius: 5px;
+        scroll-behavior: smooth;
+        -webkit-overflow-scrolling: touch;
+        scroll-snap-points-x: repeat(300px);
+        scroll-snap-type: mandatory;
+    }
+    .slides::-webkit-scrollbar{
+        width: 10px;
+        height: 10px;
+    }
+    .slides::-webkit-scrollbar-thumb{
+        background: black;
+        border-radius: 10px;
+    }
+    .slides::-webkit-scrollbar-track{
+        background: transparent;
+    }
+    .slides > div {
+        flex-shrink: 0;
+        width: 300px;
+        height: 300px;
+        border-radius: 10px;
+        background: #eee;
+        transform-origin: center center;
+        transform: scale(1);
+        transition: transform 0.5s;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 100px;
+    }
+    .slides > div:target {
+        transform: scale(0.8);
+    }
+    .author-info{
+        background: rgba(0, 0, 0, 0.75);
+        color: white;
+        padding: 0.75rem;
+        text-align: center;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        margin: 0;
+    }
+    .author-info a{
+        color: white
+    }
+
+    .slider > a {
+        display: inline-flex;
+        width: 1.5rem;
+        height: 1.5rem;
+        background: white;
+        text-decoration: none;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        margin: 0 0  0.5rem 0;
+        position: relative;
+    }
+    .slider > a:active{
+        top: 1px;
+    }
+    .slider > a:focus{
+        background: rgb(0, 0, 0);
+    }
+    @supports (scroll-snap-type){
+        .slider > a {
+            display: none;
+        }
+    }
