--- a/indexx.css
+++ b/indexx.css
@@ -64,6 +64,9 @@
         transition: 0.7s;
 
     }
+    nav.mobile ul li{
+        box-shadow: 0px 2px 8px 0px rgba(21, 247, 13, 0.8);
+    }
     nav.mobile ul li a{
         padding: 0.8rem 2rem;
         display: block;
@@ -72,7 +75,6 @@
         letter-spacing: 1px;
         transition: all 0.2s ease-in-out;
         text-decoration: none;
-        box-shadow: 0px 2px 8px 0px rgba(21, 247, 13, 0.8);
         transition: 2s;
         border-radius: 4px;
     }
