--- a/indexx.css
+++ b/indexx.css
@@ -396,6 +396,7 @@
     }
     .card img{
         width: 300px;
+        height: 300px;
         border-radius: 12px;
         padding: 5px 25px;
         margin: 20px;
